--- a/component/irc/channel/main.css
+++ b/component/irc/channel/main.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 [\@=chat] {
-  flex: 1;
+  flex-basis: 100%;
   overflow: auto;
   padding: 0.2rem;
   word-wrap: break-word;
